# mdbook-pagetoc

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  pagetoc.css  pagetoc.js
