[package]
name = "mdbook-pagetoc"
version = "0.2.1"
edition = "2021"
description = "A mdbook plugin that provides a table of contents for each page."
homepage = "https://github.com/slowsage/mdbook-pagetoc"
repository = "https://github.com/slowsage/mdbook-pagetoc"
documentation = "https://github.com/slowsage/mdbook-pagetoc"
readme = "README.md"
license = "MPL-2.0"
keywords = ["mdbook", "table", "contents", "pagetoc", "toc"]
exclude = [".github/"]

[dependencies]
mdbook = { version = "0.4.37", default-features = false }
clap = "4.5.4"
serde_json = "1.0.116"
semver = "1.0.22"
anyhow = "1.0.82"
log = "0.4.21"
env_logger = "0.11.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
