[package]
name = "mdbook-pagetoc"
version = "0.3.0"
edition = "2024"
description = "A mdbook plugin that provides a table of contents for each page."
homepage = "https://github.com/slowsage/mdbook-pagetoc"
repository = "https://github.com/slowsage/mdbook-pagetoc"
documentation = "https://github.com/slowsage/mdbook-pagetoc#readme"
readme = "README.md"
license = "MPL-2.0"
keywords = ["mdbook", "table", "contents", "pagetoc", "toc"]
exclude = [".github/"]

[dependencies]
mdbook-preprocessor = "0.5.1"
mdbook-core = "0.5.1"
clap = "4.5.53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
semver = "1.0.27"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
